cmake_minimum_required(VERSION 3.1...3.4)
project(build1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(build1 Builder.cpp)
target_link_libraries(build1)
if(BUILD_TESTS)
enable_testing()
add_subdirectory(third-party/gtest)
add_executable(check tests/test1.cpp)
target_link_libraries(check BUILD gtest_main)
add_test(NAME check COMMAND check)
endif()
